--- a/assets/css/_location.scss
+++ b/assets/css/_location.scss
@@ -283,6 +283,7 @@
     h5 {
       color: var(--secondary-accent-color);
     }
+
     .filter-items {
       form {
         height: 35px;
@@ -311,26 +312,50 @@
           }
         }
       }
-      button {
-        cursor: pointer;
-        padding: 8px 16px;
-        p {
+
+      .items {
+        select {
+          appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          cursor: pointer;
+          padding: 8px 32px 8px 16px;
+          border: none;
+          font-size: 16px;
+          color: inherit;
           text-wrap: nowrap;
+          background-repeat: no-repeat;
+          background-position: right 10px center;
+          background-size: 12px;
+
+          // Font Awesome angle-down as background image
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3Cpath fill='%23000' d='M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z'/%3E%3C/svg%3E");
+
+          &:focus {
+            outline: none;
+          }
         }
-        i {
-          border: 1px solid#0000004d;
-        }
-        &:first-of-type {
+
+        .countries {
           color: var(--primary-accent-color);
           background-color: #e2231a33;
         }
-        &:nth-of-type(2) {
+
+        .services {
           background-color: #ff9e1533;
           color: var(--secondary-accent-color);
         }
-        &:nth-of-type(3) {
+
+        button {
+          cursor: pointer;
+          padding: 8px 16px;
           background-color: var(--primary-accent-color);
           color: var(--background-color);
+          border: none;
+
+          p {
+            text-wrap: nowrap;
+          }
         }
       }
     }
