contact and location search forms updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2830,13 +2830,9 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   background-color: #fdf2f1;
   padding: 2em 0;
 }
-#other-locations .container .filter-items form {
-  height: 35px;
-  width: 15vw;
-}
 #other-locations .container .filter-items form input {
-  width: 100%;
-  height: 100%;
+  width: 160px;
+  height: 40px;
   background: transparent;
   color: var(--foreground-color);
   padding: 0.5em;
@@ -2862,7 +2858,7 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   line-height: 22px;
   color: rgba(0, 0, 0, 0.3019607843);
 }
-#other-locations .container .filter-items .items select {
+#other-locations .container .filter-items form .items select {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -2877,25 +2873,25 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   background-size: 12px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3Cpath fill='%23000' d='M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z'/%3E%3C/svg%3E");
 }
-#other-locations .container .filter-items .items select:focus {
+#other-locations .container .filter-items form .items select:focus {
   outline: none;
 }
-#other-locations .container .filter-items .items .countries {
+#other-locations .container .filter-items form .items .countries {
   color: var(--primary-accent-color);
   background-color: rgba(226, 35, 26, 0.2);
 }
-#other-locations .container .filter-items .items .services {
+#other-locations .container .filter-items form .items .services {
   background-color: rgba(255, 158, 21, 0.2);
   color: var(--secondary-accent-color);
 }
-#other-locations .container .filter-items .items button {
+#other-locations .container .filter-items form .items button {
   cursor: pointer;
   padding: 8px 16px;
   background-color: var(--primary-accent-color);
   color: var(--background-color);
   border: none;
 }
-#other-locations .container .filter-items .items button p {
+#other-locations .container .filter-items form .items button p {
   text-wrap: nowrap;
 }
 #other-locations .container .locations .location {
@@ -3269,13 +3265,9 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
 #location-map .content h5 {
   color: var(--secondary-accent-color);
 }
-#location-map .content .filter-items form {
-  height: 35px;
-  width: 15vw;
-}
 #location-map .content .filter-items form input {
-  width: 100%;
-  height: 100%;
+  width: 160px;
+  height: 40px;
   background: transparent;
   color: var(--foreground-color);
   padding: 0.5em;
@@ -3301,7 +3293,7 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   line-height: 22px;
   color: rgba(0, 0, 0, 0.3019607843);
 }
-#location-map .content .filter-items .items select {
+#location-map .content .filter-items form .items select {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -3316,25 +3308,25 @@ footer .footer-bar .container .fb-links a:last-of-type::after {
   background-size: 12px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3Cpath fill='%23000' d='M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z'/%3E%3C/svg%3E");
 }
-#location-map .content .filter-items .items select:focus {
+#location-map .content .filter-items form .items select:focus {
   outline: none;
 }
-#location-map .content .filter-items .items .countries {
+#location-map .content .filter-items form .items .countries {
   color: var(--primary-accent-color);
   background-color: rgba(226, 35, 26, 0.2);
 }
-#location-map .content .filter-items .items .services {
+#location-map .content .filter-items form .items .services {
   background-color: rgba(255, 158, 21, 0.2);
   color: var(--secondary-accent-color);
 }
-#location-map .content .filter-items .items button {
+#location-map .content .filter-items form .items button {
   cursor: pointer;
   padding: 8px 16px;
   background-color: var(--primary-accent-color);
   color: var(--background-color);
   border: none;
 }
-#location-map .content .filter-items .items button p {
+#location-map .content .filter-items form .items button p {
   text-wrap: nowrap;
 }
 #location-map .content .locations .location {
