--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -746,7 +746,7 @@ footer {
   width: 90%;
   max-width: 800px;
   background: #9a3821;
-  padding: 25px;
+  padding: 15px 25px;
   border-radius: 20px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
   z-index: 9999;
